# use-oci

./: .editorconfig  .gitignore  .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  CRATE_TEMPLATE.md  Cargo.toml  Makefile  README.md  RELEASING.md  release-plz.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: cargo-audit.yml  cargo-deny.yml  ci.yml  facade-publish-readiness.yml  publish-readiness.yml  release-plz-pr.yml  release-plz-release.yml  sbom.yml  trivy.yml
crates/use-oci/: Cargo.toml  README.md
crates/use-oci-annotation/: Cargo.toml  README.md
crates/use-oci-annotation/src/: lib.rs
crates/use-oci-config/: Cargo.toml  README.md
crates/use-oci-config/src/: lib.rs
crates/use-oci-descriptor/: Cargo.toml  README.md
crates/use-oci-descriptor/src/: lib.rs
crates/use-oci-digest/: Cargo.toml  README.md
crates/use-oci-digest/src/: lib.rs
crates/use-oci-distribution/: Cargo.toml  README.md
crates/use-oci-distribution/src/: lib.rs
crates/use-oci-hook/: Cargo.toml  README.md
crates/use-oci-hook/src/: lib.rs
crates/use-oci-image/: Cargo.toml  README.md
crates/use-oci-image/src/: lib.rs
crates/use-oci-index/: Cargo.toml  README.md
crates/use-oci-index/src/: lib.rs
crates/use-oci-layer/: Cargo.toml  README.md
crates/use-oci-layer/src/: lib.rs
crates/use-oci-layout/: Cargo.toml  README.md
crates/use-oci-layout/src/: lib.rs
crates/use-oci-manifest/: Cargo.toml  README.md
crates/use-oci-manifest/src/: lib.rs
crates/use-oci-media-type/: Cargo.toml  README.md
crates/use-oci-media-type/src/: lib.rs
crates/use-oci-namespace/: Cargo.toml  README.md
crates/use-oci-namespace/src/: lib.rs
crates/use-oci-platform/: Cargo.toml  README.md
crates/use-oci-platform/src/: lib.rs
crates/use-oci-reference/: Cargo.toml  README.md
crates/use-oci-reference/src/: lib.rs
crates/use-oci-runtime/: Cargo.toml  README.md
crates/use-oci-runtime/src/: lib.rs
crates/use-oci-tag/: Cargo.toml  README.md
crates/use-oci-tag/src/: lib.rs
crates/use-oci/examples/: basic_usage.rs
crates/use-oci/src/: lib.rs
crates/use-oci/tests/: facade.rs
docs/: README.md
scripts/: README.md
