[package]
name = "use-oci-distribution"
description = "OCI distribution identifier and route metadata primitives without registry HTTP calls."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-oci-distribution"
keywords = ["oci", "containers", "primitive", "rustuse"]
categories = ["data-structures", "development-tools", "parser-implementations"]

[dependencies]
use-oci-digest = { workspace = true }
use-oci-tag = { workspace = true }

[lints]
workspace = true
