[package]
name = "use-oci-image"
description = "OCI image primitives for image names, references, IDs, metadata, and image kind labels."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-oci-image"
keywords = ["oci", "containers", "primitive", "rustuse"]
categories = ["data-structures", "development-tools", "parser-implementations"]

[dependencies]
use-oci-annotation = { workspace = true }
use-oci-descriptor = { workspace = true }
use-oci-digest = { workspace = true }
use-oci-media-type = { workspace = true }
use-oci-platform = { workspace = true }
use-oci-reference = { workspace = true }

[lints]
workspace = true
