[package]
name = "use-oci-layer"
description = "OCI layer primitives for media types, compression markers, layer size, diff IDs, and layer kind metadata."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-oci-layer"
keywords = ["oci", "containers", "primitive", "rustuse"]
categories = ["data-structures", "development-tools", "parser-implementations"]

[dependencies]
use-oci-digest = { workspace = true }
use-oci-media-type = { workspace = true }

[lints]
workspace = true
