[package]
name = "use-oci-manifest"
description = "OCI image manifest primitives for config descriptors, layer descriptors, subjects, and annotations."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-oci-manifest"
keywords = ["oci", "containers", "primitive", "rustuse"]
categories = ["data-structures", "development-tools", "parser-implementations"]

[dependencies]
use-oci-annotation = { workspace = true }
use-oci-descriptor = { workspace = true }

[dev-dependencies]
use-oci-digest = { workspace = true }
use-oci-media-type = { workspace = true }

[lints]
workspace = true
