[package]
name = "use-oci-runtime"
description = "OCI runtime spec primitives for process, mount, namespace, hook, capability, resource, and rootfs metadata."
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-oci-runtime"
keywords = ["oci", "containers", "primitive", "rustuse"]
categories = ["data-structures", "development-tools", "parser-implementations"]

[dependencies]
use-oci-hook = { workspace = true }
use-oci-namespace = { workspace = true }

[lints]
workspace = true
